--- a/app/src/main/res/layout/activity_tweet.xml
+++ b/app/src/main/res/layout/activity_tweet.xml
@@ -3,10 +3,13 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="image"
             type="String" />
+
         <variable
             name="viewModel"
             type="com.devwujot.hashtag.framework.viewModel.TweetViewModel" />
@@ -21,24 +24,24 @@
             android:id="@+id/tweet_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="@string/hint_tweet_text"
+            android:text="@={viewModel.tweetText}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="@={viewModel.tweetText}"
-            android:hint="@string/hint_tweet_text"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/tweet_image"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/zero_dp"
             android:layout_height="wrap_content"
-            android:minHeight="200dp"
-            android:layout_marginTop="8dp"
-            android:scaleType="center"
+            android:layout_marginTop="@dimen/grid_2x"
+            android:minHeight="@dimen/tweet_image_min_height"
             android:onClick="@{() -> viewModel.onAddImageClicked()}"
-            app:loadImage="@{image}"
+            android:scaleType="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tweet_text" />
+            app:layout_constraintTop_toBottomOf="@+id/tweet_text"
+            app:loadImage="@{image}" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_send"
@@ -66,11 +69,7 @@
             android:id="@+id/tweetProgressLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:visibility="gone"
-            android:elevation="5dp"
-            android:background="@color/transparent_grey">
+            style="@style/ProgressLayout">
 
             <ProgressBar
                 android:layout_width="wrap_content"
