--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,9 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="currentHashTag"
             type="String" />
+
         <variable
             name="viewModel"
             type="com.devwujot.hashtag.framework.viewModel.SearchViewModel" />
@@ -20,14 +22,15 @@
 
         <ImageView
             android:id="@+id/follow_hashtag"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/follow_hashtag_icon_size"
+            android:layout_height="@dimen/follow_hashtag_icon_size"
             android:layout_margin="@dimen/grid_3x"
             android:elevation="1dp"
+            android:onClick="@{() -> viewModel.onFollowHashTagsClicked(currentHashTag)}"
             android:scaleType="centerInside"
             android:src="@drawable/follow_inactive"
+            android:tint="@color/colorAccent"
             android:visibility="gone"
-            android:onClick="@{() -> viewModel.onFollowHashTagsClicked(currentHashTag)}"
             app:isHashTagFollowed="@{viewModel.isHashTagFollowed}"
             app:layout_constraintEnd_toEndOf="@+id/swipe_refresh"
             app:layout_constraintTop_toTopOf="parent" />
@@ -48,11 +51,7 @@
             android:id="@+id/search_progress_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/transparent_grey"
-            android:elevation="5dp"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:visibility="gone">
+            style="@style/ProgressLayout">
 
             <ProgressBar
                 android:layout_width="wrap_content"
