--- a/app/src/main/res/layout/fragment_my_activity.xml
+++ b/app/src/main/res/layout/fragment_my_activity.xml
@@ -27,5 +27,17 @@
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
+        <LinearLayout
+            android:id="@+id/myActivityProgressLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            style="@style/ProgressLayout">
+
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
